--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,1 +1,1 @@
-{"ignoredFilesOrFolders":[],"openFiles":[],"fileToBeOpened":"nxtWatchApp/src/components/VideoDetailsView/index.js"}
+{"ignoredFilesOrFolders":[],"openFiles":["nxtWatchApp/src/components/HomePage/styledComponents.js","nxtWatchApp/src/components/SavedVideos/index.js","nxtWatchApp/src/components/SavedVideos/styledComponents.js","nxtWatchApp/src/components/FailureCard/index.js"],"fileToBeOpened":"nxtWatchApp/src/components/HomePage/index.js"}
